--- a/lang/en/common.json
+++ b/lang/en/common.json
@@ -84,6 +84,10 @@
           "description": "Convert Markdown to HTML",
           "title": "Markdown to HTML Converter"
         },
+        "json-to-java-bean": {
+          "description": "Convert JSON to Java Bean",
+          "title": "JSON to Java Bean Converter"
+        },
         "title": "Converters"
       },
       "dev": {
@@ -187,7 +191,10 @@
     "yourStarHelps": "Your star helps others discover these tools too!"
   },
   "tags": {
-    "ai": "AI"
+    "ai": "AI",
+    "base64": "Base64",
+    "java": "Java",
+    "markdown": "Markdown"
   },
   "footer": {
     "about": {
