--- a/lang/zh-CN/common.json
+++ b/lang/zh-CN/common.json
@@ -127,7 +127,7 @@
         },
         "parser": {
           "description": "轻松在 JSON stringify 和 JSON parse 之间进行转换",
-          "title": "JSON stringify 和 JSON parse"
+          "title": "JSON Parser & Stringify"
         }
       },
       "seo": {
