--- a/lang/zh-CN/common.json
+++ b/lang/zh-CN/common.json
@@ -198,7 +198,8 @@
     "ai": "AI",
     "base64": "Base64",
     "java": "Java",
-    "markdown": "Markdown"
+    "markdown": "Markdown",
+    "security": "安全"
   },
   "footer": {
     "about": {
