--- a/lang/en/common.json
+++ b/lang/en/common.json
@@ -88,7 +88,11 @@
           "description": "Convert JSON to Java Bean",
           "title": "JSON to Java Bean Converter"
         },
-        "title": "Converters"
+        "title": "Converters",
+        "url": {
+          "description": "Encode and decode URLs",
+          "title": "URL Encoder/Decoder"
+        }
       },
       "dev": {
         "ai-sql": {
@@ -203,7 +207,8 @@
     "base64": "Base64",
     "java": "Java",
     "markdown": "Markdown",
-    "security": "Security"
+    "security": "Security",
+    "encoding": "Encoding"
   },
   "footer": {
     "about": {
